clusters/buvis-prod/infrastructure/kube-system/redirect-rancher-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - rancher.buvis.net
    secretName: rancher-ui-crt
  rules:
  - host: rancher.buvis.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rancher-ui
            port:
              number: 443
